# privaxy

./: .editorconfig  .gitignore  CHANGELOG-DEV.md  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-cli.yml  build-gui.yml  check.yml  ci.yml  codeql.yml  privaxy-build.yml  privaxy-ci.yml  privaxy-draft.yml  privaxy-tag.yml  update-filters.yaml
privaxy/: Cargo.toml
src-tauri/: Cargo.toml
web_frontend/: Cargo.toml  package-lock.json  package.json
