[package]
name = "privaxy"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "privaxy"
path = "src/server/main.rs"

[lib]
name = "privaxy"
path = "src/server/lib.rs"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }
serde_json = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio-util = { version = "0.7", features = ["full"] }
adblock = { version = "0.7" }
openssl = { version = "0.10", features = ["vendored"] }
include_dir = "0.7"
chrono = { version = "0.4", features = ["serde"] }
rustls = { version = "0.21" }
futures-util = "0.3"
wildmatch = "2.1"
http = "0.2"
mime_guess = "2.0"
tokio-rustls = "0.24"
hyper-rustls = { version = "0.24", features = ["http1", "http2"] }
log = "0.4"
env_logger = "0.10"
uluru = "3.0"
regex = "1.10"
lazy_static = "1.4"
lol_html = "0.4"
crossbeam-channel = "0.5"
thiserror = "1.0"
url = "2.3"
futures = "0.3"
dirs = "5.0"
async-compression = { version = "0.4", features = ["futures-io", "gzip"] }
reqwest = { version = "0.11", features = [
  "stream",
  "rustls-tls",
  "gzip",
  "deflate",
  "json",
  "brotli",
] }
once_cell = "1.19"
serde-tuple-vec-map = "1.0"
base64 = "0.21"
