[package]
name = "web_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19"
yew-router = "0.16"
serde_json = "1.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "55fe1d144f30aa5aebeeb8ef937335f094720b4b", features = [
  "dialog",
  "event",
  "tauri",
] }
num-format = "0.4"
serde = { version = "1.0", features = ["derive"] }
gloo-utils = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
log = "0.4"
wasm-logger = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }
serde-tuple-vec-map = "1.0"
web-sys = { version = "0.3", features = [
  "Document",
  "HtmlHeadElement",
  "Element",
  "NamedNodeMap",
] }
